my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ELTYPE/T_ELTYPE-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ELTYPE_STRUCT_H
#define T_ELTYPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ELTYPE(void);


#endif /* not T_ELTYPE_STRUCT_H */
